# rust-raylib-spline

./: Cargo.toml  Dockerfile  README.md  build_wasm.sh  index.html
.github/workflows/: rust.yml
src/: bezier.rs  colors.rs  main.rs  scenes.rs
src/scenes/: curve.rs  spline.rs
