[package]
name = "spline-drawer"
version = "0.1.0"
edition = "2021"

[dependencies]
instant = { version = "0.1.12", features = [ "stdweb" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.raylib]
version = "5.0.0"
git = "https://github.com/Captainfl4me/raylib-rs"
branch = "5.0.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

