[package]
name = "spline-drawer"
version = "0.1.0"
edition = "2021"

[dependencies]
raylib = "5.0.1"

[dependencies.instant]
version = "0.1.1"
git = "https://github.com/hoodmane/instant"
branch = "emscripten-no-leading-underscore"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

